# Palimpset

./: .dockerignore  .gitignore  CLAUDE.md  Makefile  README.md
analytics/: README.md
contracts/: CHECKSUMS.sha256  claim-schema.sql  claim.schema.json
deploy/: README.md
docs/: ARCHITECTURE.md  BUILD-CONTRACT.md  DATA.md  DECISIONS.md  HANDOFF.md  LIMITATIONS.md  OPERATIONS.md  PALIMPSEST-Context-and-Decision-Record.md  PALIMPSEST-Part-1-Core-Platform.md  PREFLIGHT.md  QUESTIONS.md  phase0-worklog.md  probe-correspsearch.md
explorer/: .dockerignore  Dockerfile  index.html  package.json  playwright.config.ts  pnpm-lock.yaml  pnpm-workspace.yaml  tsconfig.json  vite.config.ts
fixtures/: sample-claims.ndjson
pipeline/: README.md  pyproject.toml
pipeline/palimpsest_pipeline/: __init__.py  cli.py
pipeline/palimpsest_pipeline/adapters/: __init__.py  base.py
pipeline/palimpsest_pipeline/adapters/correspsearch/: __init__.py  adapter.py  cmif.py
pipeline/palimpsest_pipeline/adapters/sdfb/: __init__.py  adapter.py  dates.py
pipeline/palimpsest_pipeline/harvest/: __init__.py  http.py  local_dump.py
pipeline/palimpsest_pipeline/quality/: __init__.py
pipeline/palimpsest_pipeline/schema/: __init__.py
pipeline/palimpsest_pipeline/submit/: __init__.py  client.py  manifest.py
pipeline/palimpsest_pipeline/synth/: __init__.py  generator.py
pipeline/tests/: test_correspsearch.py  test_full_dump_slow.py  test_schema.py  test_sdfb_rules.py  test_synth.py
pipeline/tests/golden/: test_golden.py
scripts/: apply_migrations.sh  check_engine_tests.sh  demo.sh  (+9 more)
(+140 files in other folders)
